--- a/debian/rules
+++ b/debian/rules
@@ -10,11 +10,7 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@  --with llxsrc 
+	dh $@  --with llxsrc,zero
 	
-	
-override_dh_install:
 
-	dllxh_install
-	dh_install
 
